# TileDB-VCF

./: .azure-pipelines.yml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  _quarto.yml  pyproject.toml
apis/python/: .gitignore  CMakeLists.txt  build-wheels.sh  conda-env.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
apis/python/dist_links/: libtiledbvcf
apis/python/remote_tests/carrara/: README.md  _util.py  conftest.py  test_01_setup.py  test_02_ingest.py  test_03_delete.py
apis/python/src/tiledbvcf/: __init__.py  allele_frequency.py  dask_functions.py  dataset.py  libhts.so.1.8  query_condition_vcf.py  sample_qc.py
apis/python/tests/: conftest.py  test_compression.py  test_config.py  test_dask.py  test_dataset.py  test_delete.py  test_export.py  test_formats.py  test_ingest.py  test_read.py  test_stats.py  test_tiledbvcf.py
apis/spark3/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
libtiledbvcf/: CMakeLists.txt  vcpkg.json
libtiledbvcf/cmake/: DownloadTileDB.cmake  Superbuild.cmake  TileDBToolchain.cmake
libtiledbvcf/cmake/Modules/: FindCLI11.cmake  FindCLI11_EP.cmake  FindCatch.cmake  FindCatch2.cmake  FindCatch_EP.cmake  FindClangTools.cmake  FindClipp_EP.cmake  FindHTSlib.cmake  FindHTSlib_EP.cmake  FindInstalledMsysEnvCmd.cmake  FindSpdlog.cmake  FindSpdlog_EP.cmake  FindTileDB_EP.cmake  FindWinDrvLet.cmake  ModHTSConfigLIBS.cmake  TileDBCommon.cmake
libtiledbvcf/cmake/patches/: cli11-2.1.0.patch  htslib-1.10-config.patch  htslib.1.15.1-win.patch  htslib.1.15.1.Makefile.dlhmods  htslib.1.15.1.Makefile.patch  htslib.1.15.1.Makefile.staticlink  htslib.1.15.1.config.mk.dlhmods  htslib.1.15.1.config.mk.patch  htslib.1.15.1.config.mk.staticlink  htslib.1.15.1.configure.ac  htslib.1.15.1.hts_defs.h.patch  htslib.1.16.Makefile.dlhmods  htslib.1.16.Makefile.patch  htslib.1.16.config.mk.dlhmods  htslib.1.16.config.mk.patch  htslib.Makefile  htslib.vcf.h.patch
libtiledbvcf/ports/: README.md
libtiledbvcf/ports/htslib/: portfile.cmake
libtiledbvcf/src/: CMakeLists.txt
libtiledbvcf/src/c_api/: arrow.h  tiledbvcf.cc  tiledbvcf.h  tiledbvcf_enum.h
libtiledbvcf/src/cli/: tiledbvcf.cc  tilevcf.cc
libtiledbvcf/src/dataset/: allele_count.cc  allele_count.h  attribute_buffer_set.cc  attribute_buffer_set.h  tiledbvcfdataset.cc  tiledbvcfdataset.h  variant_stats.cc  variant_stats.h
libtiledbvcf/src/enums/: attr_datatype.h  read_status.h
libtiledbvcf/src/htslib_plugin/: hfile_internal.h  hfile_tiledb_vfs.c  hfile_tiledb_vfs.h
libtiledbvcf/src/read/: bcf_exporter.cc  bcf_exporter.h  delete_exporter.cc  delete_exporter.h  export_format.h  exporter.cc  exporter.h  in_memory_exporter.cc  in_memory_exporter.h  pvcf_exporter.cc  pvcf_exporter.h  read_query_results.cc  read_query_results.h  reader.cc  reader.h  tsv_exporter.cc  tsv_exporter.h  variant_filters.cc  variant_filters.h
libtiledbvcf/src/stats/: allele_count.cc  allele_count.h  array_buffers.cc  array_buffers.h  arrow_adapter.cc  arrow_adapter.h  arrow_utils.cc  arrow_utils.h  carrow.h  column_buffer.cc  column_buffer.h  managed_query.cc  managed_query.h  sample_stats.cc  sample_stats.h  variant_stats.cc  variant_stats.h  variant_stats_reader.cc  variant_stats_reader.h
libtiledbvcf/src/utils/: arrow_adapter.cc  arrow_adapter.h  bitmap.h  buffer.cc  buffer.h  constants.cc  constants.h  expression_parser.cc  expression_parser.h  logger.cc  logger.h  logger_public.h  normalize.cc  normalize.h  rwlock.h  sample_utils.cc  sample_utils.h  shared_ptr_pool.h  unique_rwlock.h  uri.cc  uri.h  utils.cc  utils.h  variant_utils.cc  variant_utils.h
libtiledbvcf/src/vcf/: bed_file.cc  bed_file.h  htslib_value.h  region.cc  region.h  vcf.cc  vcf.h  vcf_merger.cc  vcf_merger.h  vcf_utils.cc  vcf_utils.h  vcf_v2.cc  vcf_v2.h  vcf_v3.cc  vcf_v3.h  vcf_v4.cc  vcf_v4.h
libtiledbvcf/src/write/: allele_counter.cc  allele_counter.h  merged_vcf_v4_stream.cc  merged_vcf_v4_stream.h  parallel_writer_worker_v4.cc  parallel_writer_worker_v4.h  qc_arrays.cc  qc_arrays.h  record_heap.cc  record_heap.h  record_heap_v2.cc  record_heap_v2.h  record_heap_v3.cc  record_heap_v3.h  record_heap_v4.cc  record_heap_v4.h  record_merge_algorithm.cc  record_merge_algorithm.h  stats_worker.cc  stats_worker.h  writer.cc  writer.h  writer_record_v4.h  writer_worker.cc  writer_worker.h  writer_worker_v2.cc  writer_worker_v2.h  writer_worker_v3.cc  writer_worker_v3.h  writer_worker_v4.cc  writer_worker_v4.h  writer_worker_v4_legacy.cc  writer_worker_v4_legacy.h
libtiledbvcf/src/write/datasources/: dataset_datasource.cc  dataset_datasource.h  datasource.h  vcf_datasource.cc  vcf_datasource.h
libtiledbvcf/test/: CMakeLists.txt  Makefile  README.md  dataset-samples.txt  run-cli-tests.sh
libtiledbvcf/test/inputs/: E001_15_coreMarks_dense.bed.gz.tbi  E001_15_coreMarks_dense_filtered.bed.gz.tbi  dupeEndPos.vcf.gz.csi  dupeStartPos.vcf.gz.csi  ingested_10_samples.txt  no-sample.bcf  no-sample.bcf.csi  overlapping.bcf  overlapping.bcf.csi  simple.bed  simple.bed.gz.tbi  simple2.bed.gz.tbi  small.bcf  small.bcf.csi  small.vcf  small.vcf.gz.csi  small.vcf.gz.tbi  small2.bcf  small2.vcf  small2.vcf.gz.csi  small3.vcf  small3.vcf.gz.csi  small_combined.bcf.csi  small_combined.vcf  small_merged.vcf  stats-test.vcf.gz.csi  v2-DjrIAzkP-downsampled.vcf.gz.tbi  varLenFilter.vcf  varLenFilter.vcf.gz.csi
libtiledbvcf/test/inputs/combined/: sample-01.vcf  sample-02.vcf  sample-03.vcf
libtiledbvcf/test/inputs/gvcf-export/: s0.vcf  s1.vcf  s2.vcf  s3.vcf  s4.vcf
libtiledbvcf/test/inputs/hail_vcf/: A.vcf  A.vcf.bcf  B.vcf  B.vcf.bcf  B.vcf.bcf.csi  C.vcf  C.vcf.bcf  D.vcf  D.vcf.bcf  Dad1.vcf  Dad1.vcf.bcf  Dad1.vcf.bcf.csi  Dad2.vcf  Dad2.vcf.bcf  Dad3.vcf  Dad3.vcf.bcf  Dtr1.vcf  Dtr1.vcf.bcf  E.vcf  (+34 more)
libtiledbvcf/test/src/: unit-bitmap.cc  unit-c-api-reader.cc  unit-c-api-writer.cc  unit-helpers.h  unit-utils.cc  unit-vcf-delete.cc  unit-vcf-export.cc  unit-vcf-iter.cc  unit-vcf-store.cc  unit-vcf-time-travel.cc  unit-vcf-utils.cc
(+1204 files in other folders)
