#
# The MIT License
#
# Copyright (c) 2024 TileDB, Inc.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#
# https://scikit-build-core.readthedocs.io/en/latest/

[project]
name = "tiledbvcf"
dynamic = ["version"]
description = "TileDB-VCF Python client"
license = { text = "MIT" }
authors = []
requires-python = "~=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = ["pandas", "pyarrow", "pyarrow-hotfix", "numpy<2"]

[project.optional-dependencies]
test = ["dask[distributed]", "pytest", "tiledb"]
dev = ["black", "tiledb-cloud", "pybind11[global]"]

[project.urls]
homepage = "https://tiledb.com"
repository = "https://github.com/TileDB-Inc/TileDB-VCF"

[build-system]
requires = ["scikit-build-core", "pybind11[global]"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.source-dir = "libtiledbvcf"
cmake.targets = ["skbuild-export"]
sdist.include = ["src/tiledbvcf/version.py"]
sdist.exclude = [".gitignore", "build-wheels.sh", "conda-env.yml"]
wheel.expand-macos-universal-tags = true
wheel.license-files = []
# NOTE: editable inplace not working yet
editable.mode = "inplace"

[tool.scikit-build.cmake.define]
TILEDB_ENABLE_PYTHON = "ON"
TILEDB_WERROR = "OFF"

[tool.setuptools_scm]
version_file = "apis/python/src/tiledbvcf/version.py"
