#
# The MIT License
#
# Copyright (c) 2024 TileDB, Inc.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#
# https://scikit-build-core.readthedocs.io/en/latest/

[project]
name = "tiledbvcf"
dynamic = ["version"]
description = "TileDB-VCF Python client"
license = { text = "MIT" }
authors = []
requires-python = "~=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["pandas<3", "pyarrow>=14.0.1", "numpy"]

[project.optional-dependencies]
test = ["pytest", "tiledb"]
dev = ["tiledb-cloud", "pybind11[global]"]

[project.urls]
homepage = "https://tiledb.com"
repository = "https://github.com/TileDB-Inc/TileDB-VCF"

[build-system]
requires = ["scikit-build-core", "pybind11[global]", "setuptools-scm>=8.1.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/tiledbvcf/version.py"]
sdist.exclude = [".gitignore", "build-wheels.sh", "conda-env.yml"]
wheel.expand-macos-universal-tags = true
wheel.license-files = []
# NOTE: editable inplace not working yet
editable.mode = "inplace"

[tool.setuptools_scm]
root = "../.."
version_file = "src/tiledbvcf/version.py"

[tool.ruff]
fix = true
preview = true  # enables "beta" rules: https://docs.astral.sh/ruff/preview/
exclude = ["*.cc"]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [  # see https://docs.astral.sh/ruff/rules/
    # consider adding:  A (flake8-builtins) and TC (flake8-type-checking)
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-exception
    "C4",   # flake8-comprehensions
    "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D",    # pydocstyle (Google convention, see setting below)
    "E",    # pycodestyle
    "ERA",  # eradicate
    "F",    # Pyflakes
    "FA",   # flake8-future-annotations
    "FLY",  # flynt
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "NPY",  # numpy-specific rules
    "PD",   # pandas-vet
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PLC",  # pylint-convention
    "PLE",  # pylint-error
    "PLW",  # pylint-warning
    "PTH",  # flake8-use-pathlib
    "S",    # flake8-bandit
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "W",    # pycodestyle warnings
    "YTT",  # flake8-2020
    "UP",   # pyupgrade
]
ignore = [
    "E501",     # disable line too long
    "D205",     # disable blank line requirement between summary and description
    "D203",     # disable incorrect-blank-line-blank-line-before-class' (disable either this OR D211)
    "D212",     # disable multi-line-summary-first-line (existing docs use second line)
    "D417",     # disable documentation for every function parameter
    "S101",     # disable use of `assert` detected
    "COM812",   # ignore recommended by Ruff
    "PLW2901",  # disable redefined-loop-name
    "B006",     # disable no mutable agument defaults (re-enable)
    "D100",     # disable missing docstring in public module (re-enable)
    "D102",     # disable missing docstring in public method (re-enable)
    "D104",     # disable missing docstring in public package (re-enable)
    "D107",     # disable missing docstring in `__init__` (re-enable)
    "D105",     # disable missing docstring in magic method (re-enable)
    "BLE001",   # disable do not catch blind exception (re-enable)
]
extend-select = []

[tool.ruff.lint.per-file-ignores]

# Temporarily ignore these rules in the script directory.
"scripts/**.py" = ["ANN", "ARG", "BLE", "C4", "CPY", "D", "ERA", "B", "INP", "S", "T20", "NPY002", "PTH", "PLW1514"]

# Ignore these rules in the test directory.
"apis/python/tests/**.py" = [
    "ANN",      # don't require type annotations for tests (possibly re-enable in the future)
    "D",        # ignore docstring linting in tests
    "PTH",      # Path/os.path warnings (re-enable in the future)
    "B017",     # allow assert blind exception (re-enable in the future)
    "PD002",    # allow pandas `inplace=True` (re-enable in the future)
    "PLW1514",  # allow opening path without explicit encoding argument
    "S602",     # allow subprocess calls
    "C417",     # allow unnecessary `map()` (re-enable in the future)
    "ARG001",   # allow unused arguments for fixtures (make better fixtures and re-enable)
]

[tool.ruff.lint.isort]
# HACK: tiledb needs to come after tiledbsoma: https://github.com/single-cell-data/TileDB-SOMA/issues/2293
section-order = ["future", "standard-library", "third-party", "tiledbsoma", "tiledb", "first-party", "local-folder"]
no-lines-before = ["tiledb"]

[tool.ruff.lint.isort.sections]
"tiledbsoma" = ["tiledbvcf"]
"tiledb" = ["tiledb"]

[tool.ruff.lint.flake8-copyright]
author = "TileDB, Inc."
notice-rgx = "(?i)Copyright \\(C\\)"  # do not require year
min-file-size = 1   # don't require copyright on empty files, e.g., __init__.py


